.provarCaches/00D6C0000000xA6UAI/objects/SSign__SSInput_Response__c.object
<CustomObject>
    <fields>
        <fullName>SSign__Data2__c</fullName>
        <label>Data 2</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SSign__Data3__c</fullName>
        <label>Data 3</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SSign__Data__c</fullName>
        <label>Data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SSign__Edit_Code__c</fullName>
        <label>Edit Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSign__SSEnvelope_Document__c</fullName>
        <label>S-Sign Envelope Document</label>
        <referenceTo>SSign__SSEnvelope_Document__c</referenceTo>
        <relationshipLabel>S-Sign Input Responses</relationshipLabel>
        <relationshipName>S_Sign_Input_Responses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>S-Sign Input Response</label>
    <nameField>
        <label>S-Sign Input Response Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>S-Sign Input Responses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>